// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input feedback states ensures that the contents do not overlap the icons 1`] = `
<div
  class="sc-beqWaB dJZbbo"
>
  <div>
    <div
      class="sc-beqWaB vEPAP"
    >
      <label
        for="the-input"
      >
        <span
          class="sc-beqWaB vEPAP sc-iAEyYk feFWGD sc-iAEyYk feFWGD"
        >
          <span
            class="sc-dmqHEX hiTUaR"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    style="position:relative"
  >
    <input
      aria-invalid="false"
      class="sc-fsQiph hkYNsr"
      id="the-input"
      type="text"
    />
    <div
      class="sc-qRumB hXyFJJ"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="sc-jsMahE kZMUa-d"
        >
          <svg
            class="sc-gLDzan eVwPjW"
            height="1.25rem"
            role="img"
            viewBox="0 0 20 20"
            width="1.25rem"
          >
            <title>
              The value of this input field is valid.
            </title>
            <path
              d="M0 10C0 4.48 4.48 0 10 0s10 4.48 10 10-4.48 10-10 10S0 15.52 0 10zm8.127 4.673a.633.633 0 0 0 .092-.105l7.734-8.572a.693.693 0 0 0-.009-.925.595.595 0 0 0-.882-.001l-7.514 8.055-2.612-2.8a.596.596 0 0 0-.88 0 .706.706 0 0 0-.014.928l3.038 3.51a.623.623 0 0 0 .486.219.587.587 0 0 0 .46-.2l.087-.097.014-.012z"
              fill="#2B8000"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input label can have a short hint 1`] = `
Object {
  "blur": [Function],
  "changeValueTo": [Function],
  "findFeedbackIconFade": [Function],
  "findHelper": [Function],
  "findInputElement": [Function],
  "focus": [Function],
  "input": <Input
    hint="The short hint"
    hintPosition="inline"
    id="the-id"
    label="The input"
    type="text"
  >
    <Box
      between={2}
      inline={false}
      tag="div"
    >
      <styled.div
        between={2}
        inline={false}
        tag="div"
      >
        <div
          className="sc-beqWaB dJZbbo"
        >
          <div>
            <Box
              between={2}
              inline={true}
              tag="div"
            >
              <styled.div
                between={2}
                inline={true}
                tag="div"
              >
                <div
                  className="sc-beqWaB vEPAP"
                >
                  <label
                    htmlFor="the-id"
                  >
                    <Styled(Box)
                      between={2}
                      inline={true}
                      tag="span"
                    >
                      <Box
                        between={2}
                        className="sc-iAEyYk feFWGD"
                        inline={true}
                        tag="span"
                      >
                        <styled.div
                          between={2}
                          className="sc-iAEyYk feFWGD"
                          inline={true}
                          tag="span"
                        >
                          <span
                            className="sc-beqWaB vEPAP sc-iAEyYk feFWGD sc-iAEyYk feFWGD"
                          >
                            <Text
                              block={false}
                              bold={true}
                              invert={false}
                              size="medium"
                            >
                              <styled.span
                                block={false}
                                bold={true}
                                invert={false}
                                size="medium"
                              >
                                <span
                                  className="sc-dmqHEX hiTUaR"
                                  size="medium"
                                >
                                  The input
                                </span>
                              </styled.span>
                            </Text>
                            <Text
                              block={false}
                              bold={false}
                              invert={false}
                              size="small"
                            >
                              <styled.span
                                block={false}
                                bold={false}
                                invert={false}
                                size="small"
                              >
                                <span
                                  className="sc-dmqHEX dbentL"
                                  size="small"
                                >
                                  The short hint
                                </span>
                              </styled.span>
                            </Text>
                          </span>
                        </styled.div>
                      </Box>
                    </Styled(Box)>
                  </label>
                </div>
              </styled.div>
            </Box>
          </div>
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <styled.input
              aria-invalid={false}
              id="the-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
            >
              <input
                aria-invalid={false}
                className="sc-fsQiph cdrdnB"
                id="the-id"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                type="text"
              />
            </styled.input>
            <styled.div>
              <div
                className="sc-qRumB hXyFJJ"
              >
                <FeedbackIcon
                  showIcon={false}
                >
                  <Fade
                    in={false}
                    mountOnEnter={true}
                    timeout={100}
                    unmountOnExit={true}
                  >
                    <Transition
                      appear={false}
                      enter={true}
                      exit={true}
                      in={false}
                      mountOnEnter={true}
                      onEnter={[Function]}
                      onEntered={[Function]}
                      onEntering={[Function]}
                      onExit={[Function]}
                      onExited={[Function]}
                      onExiting={[Function]}
                      timeout={100}
                      unmountOnExit={true}
                    />
                  </Fade>
                </FeedbackIcon>
              </div>
            </styled.div>
          </div>
        </div>
      </styled.div>
    </Box>
  </Input>,
  "label": <label
    htmlFor="the-id"
  >
    <Styled(Box)
      between={2}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="sc-iAEyYk feFWGD"
        inline={true}
        tag="span"
      >
        <styled.div
          between={2}
          className="sc-iAEyYk feFWGD"
          inline={true}
          tag="span"
        >
          <span
            className="sc-beqWaB vEPAP sc-iAEyYk feFWGD sc-iAEyYk feFWGD"
          >
            <Text
              block={false}
              bold={true}
              invert={false}
              size="medium"
            >
              <styled.span
                block={false}
                bold={true}
                invert={false}
                size="medium"
              >
                <span
                  className="sc-dmqHEX hiTUaR"
                  size="medium"
                >
                  The input
                </span>
              </styled.span>
            </Text>
            <Text
              block={false}
              bold={false}
              invert={false}
              size="small"
            >
              <styled.span
                block={false}
                bold={false}
                invert={false}
                size="small"
              >
                <span
                  className="sc-dmqHEX dbentL"
                  size="small"
                >
                  The short hint
                </span>
              </styled.span>
            </Text>
          </span>
        </styled.div>
      </Box>
    </Styled(Box)>
  </label>,
}
`;

exports[`Input renders 1`] = `
<div
  class="sc-beqWaB dJZbbo"
>
  <div>
    <div
      class="sc-beqWaB vEPAP"
    >
      <label
        for="the-input"
      >
        <span
          class="sc-beqWaB vEPAP sc-iAEyYk feFWGD sc-iAEyYk feFWGD"
        >
          <span
            class="sc-dmqHEX hiTUaR"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    style="position:relative"
  >
    <input
      aria-invalid="false"
      class="sc-fsQiph cdrdnB"
      id="the-input"
      type="text"
    />
    <div
      class="sc-qRumB hXyFJJ"
    />
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="sc-beqWaB dJZbbo"
>
  <div>
    <div
      class="sc-beqWaB vEPAP"
    >
      <label
        for="the-input"
      >
        <span
          class="sc-beqWaB vEPAP sc-iAEyYk feFWGD sc-iAEyYk feFWGD"
        >
          <span
            class="sc-dmqHEX hiTUaR"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    style="position:relative"
  >
    <input
      aria-invalid="true"
      class="sc-fsQiph gHFngC"
      id="the-input"
      type="text"
    />
    <div
      class="sc-qRumB hXyFJJ"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="sc-jsMahE kZMUa-d"
        >
          <svg
            class="sc-gLDzan eVwPjW"
            height="1.25rem"
            role="img"
            viewBox="0 0 20 20"
            width="1.25rem"
          >
            <title>
              The value of this input field is invalid.
            </title>
            <path
              d="M0 10C0 4.48 4.48 0 10 0s10 4.48 10 10-4.48 10-10 10S0 15.52 0 10zm10 5.833a.833.833 0 1 0 0-1.666.833.833 0 0 0 0 1.666zm-.003-2.5c.354 0 .644-.306.654-.69l.182-6.912c.01-.4-.285-.731-.654-.731H9.82c-.369 0-.664.33-.654.73l.175 6.912c.01.385.3.691.655.691z"
              fill="#c12335"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
